# kwin-effects-libanimation-wobbly

./: CMakeLists.txt
cmake/Modules/: FindLibanimation.cmake
doc/libanimation/: PKGBUILD  install-geometry-headers.diff
src/: CMakeLists.txt  WobblyWindowsConfig.kcfgc  WobblyWindowsEffect.cc  WobblyWindowsEffect.h  metadata.json  options.kcfg  plugin.cc
src/kcm/: CMakeLists.txt  WobblyWindowsEffectKCM.cc  WobblyWindowsEffectKCM.h  WobblyWindowsEffectKCM.ui  metadata.json  plugin.cc
